# kedro_titanic

./: README.md
titanic-survival-prediction/: README.md  pyproject.toml  requirements.txt
titanic-survival-prediction/conf/base/: catalog.yml  parameters.yml  parameters_de.yml  parameters_ds.yml
titanic-survival-prediction/notebooks/: check_dataset.py
titanic-survival-prediction/src/titanic_survival_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
titanic-survival-prediction/src/titanic_survival_prediction/pipelines/de/: __init__.py  nodes.py  pipeline.py
titanic-survival-prediction/src/titanic_survival_prediction/pipelines/ds/: __init__.py  nodes.py  pipeline.py
titanic-survival-prediction/tests/pipelines/de/: test_pipeline.py
titanic-survival-prediction/tests/pipelines/ds/: test_pipeline.py
