[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "titanic_survival_prediction"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
titanic-survival-prediction = "titanic_survival_prediction.__main__:main"

[tool.kedro]
package_name = "titanic_survival_prediction"
project_name = "Titanic Survival Prediction"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "titanic_survival_prediction.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
